fix: search flicker

--- a/Components/Layout/Navbar.module.sass
+++ b/Components/Layout/Navbar.module.sass
@@ -85,7 +85,7 @@
 
     .searchInput
         width: 100%
-        height: 100%
+        height: initial
         border-radius: 4px 0 0 4px
         padding-left: 15px
         font-size: 16px
